# LSM-system_drf

./: .env.sample  pyproject.toml
config/: celery.py  settings.py  urls.py
materials/: models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_video_link_subscription.py  0004_course_price.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: add_payments.py  csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_user_is_moderator.py  0004_alter_user_managers.py  0005_payment_is_paid_payment_stripe_payment_link_and_more.py
